plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.7'
	id 'io.spring.dependency-management' version '1.1.7'
}
ext {
	springAiVersion = "2.0.0"
}

group = 'com.gnagnoohc'
version = '0.0.1-SNAPSHOT'
description = '학생통합역량시스템 (Student Competency Management System)'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// ── AI ────────────────────────────────────────────────────────
// TODO: LOCAL, 배포 모두 pgvector 의존성 추가 필요
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
//	직접 테스트코드로 실행 원할 경우 로컬 한정으로 올라마 모델 설치 - 의존성 추가 필요, develop에선 무조건 주석 처리해야하니 push 전 필수로 확인
	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'

	// ── docker ────────────────────────────────────────────────────────
	runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'

	// ── Web ────────────────────────────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// ── AOP (감사 어노테이션) ────────────────────────────────-
	implementation 'org.springframework:spring-aop'
	implementation 'org.aspectj:aspectjweaver'

	// ── JPA ────────────────────────────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.hibernate.orm:hibernate-vector'
	runtimeOnly 'org.postgresql:postgresql'

	// ── Security ───────────────────────────────────────────────────
	// 사용자 유형이 학생/교직원/상담사/기업체 4종이라 권한 설계가 처음부터 필요
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// ── QueryDSL ───────────────────────────────────────────────────
	// 잡매칭 조건 검색, 취업통계 집계, 프로그램 다중 필터에 필수
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// ── API 문서 ───────────────────────────────────────────────────
	// 2.x는 Spring Boot 3용, 3.x부터 Boot 4를 지원합니다. 버전을 반드시 맞추세요.
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	// ── 통계/엑셀 (P5100 취업통계조사 생성, 운영현황 다운로드 / WP-102 진단문항 엑셀 업로드) ──
	implementation 'org.apache.poi:poi-ooxml:5.4.0'

	// ── 수료증 PDF 출력 (P1200) ────────────────────────────────────
	// implementation 'com.github.librepdf:openpdf:2.0.3'

	// ── 알림 메일 (상담 확정, 승인 결과 통보) ──────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 메일 템플릿용

	// ── 배치 (마일리지 정산, 취업통계 집계) ────────────────────────
	// 처음부터 넣지 말고 실제로 필요해질 때 주석 해제하세요.
	// implementation 'org.springframework.boot:spring-boot-starter-batch'

	// ── 개발 편의 ──────────────────────────────────────────────────
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// ── 테스트 ─────────────────────────────────────────────────────
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'com.h2database:h2'
}

def generatedDir = layout.buildDirectory.dir('generated/querydsl')
tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory = generatedDir.get().asFile
	options.compilerArgs << '-parameters'
	options.encoding = 'UTF-8'
}
sourceSets {
	main {
		java {
			srcDirs += [ generatedDir.get().asFile ]
		}
	}
}
clean {
	delete generatedDir
}
dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
